// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`style and class handling can set class on multi root component 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<div>a</div>\`);
  }
  
  class Block2 extends BStatic {
    static el = elem(\`<span>b</span>\`);
  }
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new BMulti(2);
    const b2 = b1.children[0] = new Block1();
    const b3 = b1.children[1] = new Block2();
    return b1;
  }
}"
`;

exports[`style and class handling can set class on multi root component 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new BComponent(\`Child\`, {}, \`__1\`, ctx, node);
    b1.parentClass = \`fromparent\`;
    return b1;
  }
}"
`;

exports[`style and class handling can set class on sub component 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<div>child</div>\`);
  }
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`style and class handling can set class on sub component 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new BComponent(\`Child\`, {}, \`__1\`, ctx, node);
    b1.parentClass = \`some-class\`;
    return b1;
  }
}"
`;

exports[`style and class handling can set class on sub sub component 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<div>childchild</div>\`);
  }
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`style and class handling can set class on sub sub component 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new BComponent(\`ChildChild\`, {}, \`__1\`, ctx, node);
    b1.parentClass = \`fromchild\`;
    return b1;
  }
}"
`;

exports[`style and class handling can set class on sub sub component 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new BComponent(\`Child\`, {}, \`__1\`, ctx, node);
    b1.parentClass = \`fromparent\`;
    return b1;
  }
}"
`;

exports[`style and class handling can set more than one class on sub component 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<div>child</div>\`);
  }
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`style and class handling can set more than one class on sub component 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new BComponent(\`Child\`, {}, \`__1\`, ctx, node);
    b1.parentClass = \`a  b\`;
    return b1;
  }
}"
`;

exports[`style and class handling can set style and class on component 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<div style=\\"font-weight:bold;\\" class=\\"some-class\\">world</div>\`);
  }
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`style and class handling class on sub component, which is switched to another 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<div>a</div>\`);
  }
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`style and class handling class on sub component, which is switched to another 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<span>b</span>\`);
  }
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`style and class handling class on sub component, which is switched to another 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new BMulti(2);
    if (ctx['props'].child==='a') {
      b1.children[0] = new BComponent(\`ChildA\`, {}, \`__1\`, ctx, node);
    } else {
      b1.children[1] = new BComponent(\`ChildB\`, {}, \`__2\`, ctx, node);
    }
    return b1;
  }
}"
`;

exports[`style and class handling class on sub component, which is switched to another 4`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new BComponent(\`Child\`, {child: ctx['state'].child}, \`__1\`, ctx, node);
    b1.parentClass = \`someclass\`;
    return b1;
  }
}"
`;

exports[`style and class handling component class and parent class combine together 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<div class=\\"child\\">child</div>\`);
  }
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`style and class handling component class and parent class combine together 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new BComponent(\`Child\`, {}, \`__1\`, ctx, node);
    b1.parentClass = \`from parent\`;
    return b1;
  }
}"
`;

exports[`style and class handling setting a class on a child component with text node 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new BText(\`child\`);
    return b1;
  }
}"
`;

exports[`style and class handling setting a class on a child component with text node 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BStatic, BText, BDispatch} = Blocks;
  let {elem, toString, withDefault, call, getTemplate, zero, callSlot, capture} = utils;
  
  return function template(ctx, node = ctx.__owl__) {
    const b1 = new BComponent(\`Child\`, {}, \`__1\`, ctx, node);
    b1.parentClass = \`some-class\`;
    return b1;
  }
}"
`;
